@@ -1,12 +1,13 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.ide.plugins;
 
 import com.intellij.openapi.extensions.PluginId;
 import com.intellij.openapi.util.BuildNumber;
 import com.intellij.openapi.util.JDOMUtil;
-import com.intellij.openapi.util.SafeJdomFactory;
 import com.intellij.openapi.util.io.IoTestUtil;
 import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.platform.util.plugins.DataLoader;
+import com.intellij.platform.util.plugins.LocalFsDataLoader;
 import com.intellij.testFramework.PlatformTestUtil;
 import com.intellij.testFramework.UsefulTestCase;
 import com.intellij.testFramework.rules.TempDirectory;
@@ -20,8 +21,8 @@ import org.junit.Test;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
@@ -125,7 +126,7 @@ public class PluginManagerTest {
   @Test
   public void testSimplePluginSort() throws Exception {
     // muted failure, investigation is assigned
-    doPluginSortTest("simplePluginSort", false);
+     doPluginSortTest("simplePluginSort", false);
   }
 
   @Test
@@ -135,7 +136,7 @@ public class PluginManagerTest {
 
   @Test
   public void testModulePluginIdContract() {
-    Path pluginsPath = Paths.get(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "withModules");
+    Path pluginsPath = Path.of(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "withModules");
     IdeaPluginDescriptorImpl descriptorBundled = loadDescriptorInTest(pluginsPath, Collections.emptySet(), true);
     Map<PluginId, IdeaPluginDescriptorImpl> idMap = PluginManagerCore.buildPluginIdMap(Collections.singletonList(descriptorBundled));
     PluginId moduleId = PluginId.getId("foo.bar");
@@ -145,7 +146,7 @@ public class PluginManagerTest {
 
   @Test
   public void testIdentifyPreInstalledPlugins() {
-    Path pluginsPath = Paths.get(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "updatedBundled");
+    Path pluginsPath = Path.of(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "updatedBundled");
     IdeaPluginDescriptorImpl descriptorBundled = loadDescriptorInTest(pluginsPath.resolve("bundled"), Collections.emptySet(), true);
     IdeaPluginDescriptorImpl descriptorInstalled = loadDescriptorInTest(pluginsPath.resolve("updated"), Collections.emptySet(), false);
     assertEquals(descriptorBundled.getPluginId(), descriptorInstalled.getPluginId());
@@ -162,7 +163,7 @@ public class PluginManagerTest {
 
   @Test
   public void testIdentifyPreInstalledPluginsInReverseOrder() {
-    Path pluginsPath = Paths.get(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "updatedBundled");
+    Path pluginsPath = Path.of(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "updatedBundled");
     IdeaPluginDescriptorImpl descriptorBundled = loadDescriptorInTest(pluginsPath.resolve("bundled"), Collections.emptySet(), true);
     IdeaPluginDescriptorImpl descriptorInstalled = loadDescriptorInTest(pluginsPath.resolve("updated"), Collections.emptySet(), false);
     assertEquals(descriptorBundled.getPluginId(), descriptorInstalled.getPluginId());
@@ -196,7 +197,7 @@ public class PluginManagerTest {
   }
 
   private static void assertConvertsTo(String untilBuild, String result) {
-    assertEquals(result, IdeaPluginDescriptorImpl.convertExplicitBigNumberInUntilBuildToStar(untilBuild));
+    assertEquals(result, PluginManager.convertExplicitBigNumberInUntilBuildToStar(untilBuild));
   }
 
   private static void assertIncompatible(String ideVersion, String sinceBuild, String untilBuild) {
@@ -220,33 +221,57 @@ public class PluginManagerTest {
 
   private static @NotNull PluginManagerState loadAndInitializeDescriptors(@NotNull String testDataName, boolean isBundled)
     throws IOException, JDOMException {
-    Path file = Paths.get(getTestDataPath(), testDataName);
+    Path file = Path.of(getTestDataPath(), testDataName);
     DescriptorListLoadingContext parentContext = new DescriptorListLoadingContext(0, Collections.emptySet(), createPluginLoadingResult(true));
 
-    Element root = JDOMUtil.load(file, parentContext.getXmlFactory());
-    BasePathResolver pathResolver = new BasePathResolver() {
+    Element root = JDOMUtil.load(file, parentContext.getJdomFactory());
+    PathResolver pathResolver = new PathResolver() {
       @Override
-      public @NotNull Element resolvePath(@NotNull Path basePath,
-                                          @NotNull String relativePath,
-                                          @NotNull SafeJdomFactory jdomFactory) {
+      public boolean isFlat() {
+        return false;
+      }
+
+      @Override
+      public boolean loadXIncludeReference(@NotNull RawPluginDescriptor readInto,
+                                           @NotNull ReadModuleContext readContext,
+                                           @NotNull DataLoader dataLoader,
+                                           @Nullable String base,
+                                           @NotNull String relativePath) {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public @NotNull RawPluginDescriptor resolvePath(@NotNull ReadModuleContext readContext,
+                                                      @NotNull DataLoader dataLoader,
+                                                      @NotNull String relativePath,
+                                                      @Nullable RawPluginDescriptor readInto) {
         for (Element child : root.getChildren("config-file-idea-plugin")) {
           String url = Objects.requireNonNull(child.getAttributeValue("url"));
-          if (url.endsWith("/" + relativePath)) return child;
+          if (url.endsWith("/" + relativePath)) {
+            return XmlReader.readModuleDescriptor(elementAsBytes(child), readContext, this, dataLoader, null, readInto, null);
+          }
         }
         throw new AssertionError("Unexpected: " + relativePath);
       }
     };
 
     for (Element element : root.getChildren("idea-plugin")) {
-      String url = element.getAttributeValue("url");
-      Path pluginPath = Paths.get(Objects.requireNonNull(url));
-      IdeaPluginDescriptorImpl descriptor = new IdeaPluginDescriptorImpl(pluginPath, pluginPath, isBundled);
-      descriptor.readExternal(element, pathResolver, parentContext, descriptor);
+      Path pluginPath = Path.of(Objects.requireNonNull(element.getAttributeValue("url")));
+      IdeaPluginDescriptorImpl descriptor = PluginDescriptorTestKt.createFromDescriptor(pluginPath,
+                                                                                        isBundled,
+                                                                                        elementAsBytes(element),
+                                                                                        parentContext,
+                                                                                        pathResolver,
+                                                                                        new LocalFsDataLoader(pluginPath));
       parentContext.result.add(descriptor,  /* overrideUseIfCompatible = */ false);
     }
     parentContext.close();
     parentContext.result.finishLoading();
     return PluginManagerCore.initializePlugins(parentContext, PluginManagerTest.class.getClassLoader(), /* checkEssentialPlugins = */ false);
+  }
+
+  private static @NotNull byte[] elementAsBytes(Element child) {
+    return JDOMUtil.write(child).getBytes(StandardCharsets.UTF_8);
   }
 
   /** @noinspection unused */
@@ -264,17 +289,17 @@ public class PluginManagerTest {
         sb.append("\n    <module value=\"").append(module.getIdString()).append("\"/>");
       }
       for (PluginDependency dependency : d.getPluginDependencies()) {
-        if (!dependency.isOptional) {
-          sb.append("\n    <depends>").append(escape.apply(dependency.id.getIdString())).append("</depends>");
+        if (!dependency.isOptional()) {
+          sb.append("\n    <depends>").append(escape.apply(dependency.getPluginId().getIdString())).append("</depends>");
         }
         else {
           IdeaPluginDescriptorImpl optionalConfigPerId = dependency.subDescriptor;
           if (optionalConfigPerId == null) {
-            sb.append("\n    <depends optional=\"true\" config-file=\"???\">").append(escape.apply(dependency.id.getIdString())).append("</depends>");
+            sb.append("\n    <depends optional=\"true\" config-file=\"???\">").append(escape.apply(dependency.getPluginId().getIdString())).append("</depends>");
           }
           else {
               sb.append("\n    <depends optional=\"true\" config-file=\"")
-                .append(optionalConfigPerId.getPluginPath().getFileName().toString()).append("\">").append(escape.apply(dependency.id.getIdString())).append("</depends>");
+                .append(optionalConfigPerId.getPluginPath().getFileName().toString()).append("\">").append(escape.apply(dependency.getPluginId().getIdString())).append("</depends>");
           }
         }
       }
